--- a/src/component/Css/content.css
+++ b/src/component/Css/content.css
@@ -1,5 +1,11 @@
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .header a {
-  cursor: pointer;
+  cursor: default;
   font-size: 64px;
   font-weight: 600;
   transition: 0.25s;
@@ -13,11 +19,6 @@
   font-weight: 600;
   transition: 0.25s;
   color: #000;
-}
-
-.header a:hover {
-  text-decoration: underline overline;
-  font-weight: 800;
 }
 
 .content {
@@ -58,7 +59,8 @@
 }
 
 @media screen and (max-width: 395px) {
-  .header a {
+  .header a,
+  .header p {
     font-size: 48px;
   }
 
@@ -92,3 +94,38 @@
 .navigate b:hover {
   color: #8a2be2;
 }
+
+.body iframe {
+  width: 100%;
+  height: 100vh;
+}
+
+.link {
+  color: #000;
+}
+
+.link:hover {
+  color: #0000ff;
+}
+
+.back {
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  font-size: 36px;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #000;
+  transition: 0.35s ease-in-out;
+}
+
+.back:hover {
+  background: var(--sub-color3);
+  color: #fff;
+  border: 2px solid #fff;
+ 
+}
+
