--- a/src/component/Css/content.css
+++ b/src/component/Css/content.css
@@ -52,6 +52,30 @@
   font-size: 24px;
 }
 
+.subtags .btn {
+  padding: 0.25rem 0.5rem;
+  width: fit-content;
+  cursor: pointer;
+
+  transition: 0.8s;
+  border: 2px solid #000;
+  border-radius: 5px;
+
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.subtags .btn:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.subtags button a {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1240px) {
   .content {
     padding: 1.5rem 1rem;
@@ -84,15 +108,19 @@
 }
 
 .navigate {
+  transition: 0.2s;
+  width: fit-content;
   cursor: pointer;
-  text-decoration: underline;
-  transition: 0.5s;
-
+  margin: 0.5rem 0;
   color: #000;
 }
 
-.navigate b:hover {
-  color: #8a2be2;
+.navigate b {
+  text-decoration: underline;
+}
+
+.navigate:hover {
+  color: var(--sub-color2);
 }
 
 .body iframe {
@@ -126,6 +154,4 @@
   background: var(--sub-color3);
   color: #fff;
   border: 2px solid #fff;
- 
 }
-
