--- a/src/App.css
+++ b/src/App.css
@@ -110,9 +110,9 @@
     transition: 0.25s;
   }
 
-  .content {
+  /* .content {
     padding: 0 1rem;
-  }
+  } */
 
   .info h1 {
     font-size: 52px;
@@ -131,7 +131,7 @@
   .container {
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0 1rem;
+    padding:2rem 1rem;
   }
 
   .menu {
