--- a/src/component/Css/content.css
+++ b/src/component/Css/content.css
@@ -83,25 +83,82 @@
   font-weight: bold;
 }
 
+.box h3 {
+  font-size: 25px;
+  margin: 0.5rem 1rem;
+}
+
+.card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card-list .card,
+.card-list .mini-card {
+  margin: 1rem;
+  padding: 1.5rem;
+  border-radius: 15px;
+  background-color: var(--sub-color1);
+  box-shadow: #00000029 0px 1px 4px;
+}
+
+.card-list .card {
+  min-width: 450px;
+}
+
+.card-list .mini-card {
+  min-width: 200px;
+  text-align: center;
+}
+
+.card-list .card .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 0.5rem;
+}
+
+.card-list .card img {
+  width: 100px;
+  height: 100px;
+}
+
 @media screen and (max-width: 1240px) {
   .content {
     padding: 1.5rem 1rem;
   }
 }
 
-@media screen and (max-width: 395px) {
+@media screen and (max-width: 600px) {
+  .content {
+    padding: 2rem;
+  }
+
+
   .header a,
   .header p {
     font-size: 48px;
   }
 
   .tags {
-    font-size: 32px;
+    font-size: 28px;
   }
 
   .subtags a {
-    font-size: 20px;
+    font-size: 18px;
   }
+
+  .card-list .card img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .card-list .card {
+    min-width: 350px;
+  }
+
 }
 
 .lists {
@@ -161,46 +218,4 @@
   background: var(--sub-color3);
   color: #fff;
   border: 2px solid #fff;
-}
-
-.box h3 {
-  font-size: 25px;
-  margin: 0.5rem 1rem;
-}
-
-.card-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.card-list .card,
-.card-list .mini-card {
-  margin: 1rem;
-  padding: 1.5rem;
-  border-radius: 15px;
-  background-color: var(--sub-color1);
-  box-shadow: #00000029 0px 1px 4px;
-}
-
-.card-list .card {
-  min-width: 450px;
-}
-
-.card-list .mini-card {
-  min-width: 150px;
-  text-align: center;
-}
-
-.card-list .card .logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-bottom: 0.5rem;
-}
-
-.card-list .card img {
-  width: 100px;
-  height: 100px;
 }
